GtkApplication: properly unexport x11 menus

https://bugzilla.gnome.org/show_bug.cgi?id=688362